2007-Oct-24  Heikki Junnila <hjunnila@users.sf.net>
	* Updated some compilation requirements to README
	* Fixed VC widgets' tendency to crash when they were destroyed thru
	  the widgets' own menus. One must NOT put "this" as the menu parent.

2007-Oct-22  Heikki Junnila <hjunnila@users.sf.net>
	* Changed App::modeChanged() to include the new mode as its parameter
	* Changed all respective slots regarding App::modeChanged signal
	* Moved blackout stuff from App to DMXMap
	* Changed most view buttons in the app toolbar to toggle buttons
	* Changed blackout button in the app toolbar to a toggle button
	* Changed blackout.png to black text on invisible background
	* Made DMXMap into a QObject and set it to send blackout state signals
	* Adding widgets thru VCFrame also selects the new widget

2007-Oct-22  Heikki Junnila <hjunnila@users.sf.net>
	* Created DMXMap & DMXMapEditor objects to handle universe mapping
	  to plugins and their universe outputs.
	* Modified lots of components that the change above had effect on.
	* DMXMap doesn't necessarily work yet...

2007-Sep-30  Heikki Junnila <hjunnila@users.sf.net>
	* Removed VCFrame::mousePressEvent()
	* Added VCFrame::paintEvent() and ::mouseMoveEvent() for bottom
	  frame handling.

2007-Sep-30  Heikki Junnila <hjunnila@users.sf.net>
	* Converted VCXYPad to use VCWidget as parent instead of QFrame.

2007-Sep-29  Heikki Junnila <hjunnila@users.sf.net>
	* Finished VCSlider saveXML
	* Finished VCSlider loadXML
	* Fixed non-updating level low&high spins in VCSliderPropertiesx

2007-Sep-29  Heikki Junnila <hjunnila@users.sf.net>
	* Added new channel groups: Prism, Maintenance, Shutter & Nothing
	* Updated all fixture defs' channel groupings
	* Fixed control byte setting in QLCChannel::operator=
	* Updated VCSlider's channel saving
	* Removed KApplicationNameShort from fixture editor
	* Updated fixture editor's about box

2007-Sep-24  Heikki Junnila <hjunnila@users.sf.net>